--- a/versions.properties
+++ b/versions.properties
@@ -7,6 +7,8 @@
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
 
+version.com.google.guava..guava=31.1-jre
+
 version.kotlin=1.7.10
 
 version.org.ow2.asm..asm=9.3
