--- a/versions.properties
+++ b/versions.properties
@@ -11,6 +11,8 @@ version.com.google.guava..guava=31.1-jre
 
 version.kotlin=1.7.10
 
+version.org.jgrapht..jgrapht-core=1.5.1
+
 version.org.ow2.asm..asm=9.3
 
 version.org.ow2.asm..asm-commons=9.3
